# logos

./: .gitignore  pyproject.toml
logos/: __init__.py  index.py  ingest.py  log.py  main.py  session.py  types.py  upload.py
logos/settings/: __init__.py  globals.py
